# Watu-Wa-Gaming-Bot

./: Pipfile  main.py  package.json  pyproject.toml  requirements.txt
cogs/: music.py
config/: config.py
config/cookies/: cookies.txt
musicbot/commands/: general.py
