[tool.poetry]
name = "watu-wa-gaming-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
youtube-dl = "^2021.1.16"
praw = "^7.1.0"
lavalink = "^3.1.4"
wget = "^3.2"
bs4 = "^0.0.1"
pytz = "^2021.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
